style in titles improved

--- a/assets/css/luiyologia.css
+++ b/assets/css/luiyologia.css
@@ -39,3 +39,9 @@ blockquote p{
 .spacious li {
   margin: 0 0 1rem 0;
 }
+
+article.post h2,
+article.post h3,
+article.post h4 {
+    color: #646464;
+}
