--- a/docs/css/luiyologia.css
+++ b/docs/css/luiyologia.css
@@ -16,7 +16,7 @@ blockquote p{
   border: 1px dotted #555555;
 }
 
-.pasaje {
+.excerpt {
   background: transparent url(../img/blog/book_bg.jpg) no-repeat left top;
   margin: 10px 0px;
   padding: 20px 25px;
