--- a/assets/css/luiyologia.css
+++ b/assets/css/luiyologia.css
@@ -1,5 +1,8 @@
 /* Custom styles for the blog
 -------------------------------------------------- */
+#content p{
+  text-align: justify;
+}
 
 blockquote{
 background: transparent url(../img/blog/mouth_quote.png) no-repeat left top;
@@ -25,8 +28,12 @@ blockquote p{
   text-align:justify;
 }
 
+.image {
+  margin-bottom: 20px;
+}
+
 .image.lateral {
-  width:300px;
+  width:40%;
   margin-left: 30px;
   float:right;
 }
