--- a/assets/css/luiyologia.css
+++ b/assets/css/luiyologia.css
@@ -25,6 +25,15 @@ blockquote{
   margin-bottom: 20px;
 }
 
+.image.central {
+  max-width:95%;
+  display: inherit;
+}
+
+.image.central img {
+  margin: auto;
+}
+
 .image.lateral {
   max-width:40%;
   margin-left: 30px;
