--- a/static/css/travel-cv.css
+++ b/static/css/travel-cv.css
@@ -10,7 +10,7 @@
 }
 
 h2 {
-  font: 400 40px/1.5 Helvetica, Verdana, sans-serif;
+  font: 400 40px/1.5 "Raleway", Helvetica, sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -22,7 +22,7 @@ ul {
 }
 
 li {
-  font: 200 20px/1.5 Helvetica, Verdana, sans-serif;
+  font: 200 20px/1.5 "Raleway", Helvetica, sans-serif;
   border-bottom: 1px solid #ccc;
 }
 
@@ -40,5 +40,5 @@ ul li ul {
 }
 
 ul li ul li {
-  font: 200 15px/1.5 Helvetica, Verdana, sans-serif;
+  font: 200 15px/1.5 "Raleway", Helvetica, sans-serif;
 }
