--- a/static/css/travel-cv.css
+++ b/static/css/travel-cv.css
@@ -17,13 +17,23 @@ h2 {
 
 ul {
   list-style-type: none;
-  margin: 0;
+  margin: 0 !important;
   padding: 0;
 }
 
 li {
   font: 200 20px/1.5 "Raleway", Helvetica, sans-serif;
   border-bottom: 1px solid #ccc;
+}
+
+li span {
+  font-style: italic;
+  position: absolute;
+}
+
+li p {
+  padding-left: 90px;
+  margin: 0 !important;
 }
 
 li:last-child {
@@ -36,9 +46,10 @@ li:hover {
 
 ul li ul {
   margin: 0 !important;
-  padding-left: 30px;
+  padding-left: 90px;
 }
 
 ul li ul li {
   font: 200 15px/1.5 "Raleway", Helvetica, sans-serif;
+  padding-left: initial;
 }
