--- a/static/css/travel-cv.css
+++ b/static/css/travel-cv.css
@@ -11,7 +11,7 @@
 
 h2 {
   font: 400 40px/1.5 "Raleway", Helvetica, sans-serif;
-  margin: 0;
+  margin: 0.5em 0;
   padding: 0;
 }
 
@@ -26,6 +26,14 @@ li {
   border-bottom: 1px solid #ccc;
 }
 
+li:last-child {
+  border: none;
+}
+
+li:hover {
+  background: #f6f6f6;
+}
+
 li span {
   font-style: italic;
   position: absolute;
@@ -34,14 +42,6 @@ li span {
 li p {
   padding-left: 90px;
   margin: 0 !important;
-}
-
-li:last-child {
-  border: none;
-}
-
-li:hover {
-  background: #f6f6f6;
 }
 
 ul li ul {
