featured caption added

--- a/themes/hugo-future-imperfect/layouts/partials/sidebar.html
+++ b/themes/hugo-future-imperfect/layouts/partials/sidebar.html
@@ -55,7 +55,7 @@
                 {{ ($.Scratch.Get "dateType").Format "January 2, 2006" }}
               </time>
             </header>
-            {{ .Render "featured" }}
+            {{ .Render "featured-list" }}
           </article>
         {{ end }}
       </div>
