--- a/static/css/luiyologia.css
+++ b/static/css/luiyologia.css
@@ -41,10 +41,12 @@ blockquote.twitter-tweet{
   max-width:40%;
   margin-left: 30px;
   float:right;
+  padding-bottom: 0;
 }
 
 .image.lateral img {
   margin-bottom: 10px;
+  position: inherit;
 }
 
 .spacious li {
