--- a/static/css/luiyologia.css
+++ b/static/css/luiyologia.css
@@ -39,7 +39,7 @@ blockquote.twitter-tweet{
 
 .image.lateral {
   max-width:40%;
-  margin-left: 30px;
+  margin: 0 1em;
   float:right;
   padding-bottom: 0;
 }
